k8s/api/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chess-api
spec:
  selector:
    app: chess-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
